--- a/555555.html
+++ b/555555.html
@@ -61,17 +61,21 @@
         <div class="row">
             <div class="col-12 col-md-4 text-center">
                 <h2 style="color: orangered"><strong>劇情介紹</strong></h2>
-                <p style="color: white">點擊了解劇情大意</p>
+                <div class="mt-3">
+                    <button type="button" class="btn btn-warning">點擊</button>
+                </div>
             </div>
             <div class="col-12 col-md-4 text-center">
                 <h2 style="color: orangered"><strong>角色介紹</strong></h2>
-                <p style="color: white">點擊了解角色詳細</p>
+                <div class="mt-3">
+                    <button type="button" class="btn btn-warning"><a href="777777.html" style="text-decoration: none; color: black;">主要角色</a></button>
+                </div>
             </div>
             <div class="col-12 col-md-4 text-center">
                 <h2 style="color: orangered"><strong>其它</strong></h2>
                 <div class="dropdown">
                     <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown">
-                        <span style="font-family: fantasy">相關網站</span>
+                        <span style="font-family: fantasy">相關網站介紹</span>
                     </button>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="https://zh.wikipedia.org/wiki/%E6%8D%8D%E8%A1%9B%E4%BB%BB%E5%8B%99" target="_blank">WIKIPEDIA</a>
