update 777777.html(fix pictures caption)

--- a/777777.html
+++ b/777777.html
@@ -64,7 +64,7 @@
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/6iLEwoggYVE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" style="padding: 0px; padding-top: 20px" allowfullscreen></iframe>
                 </div>
-                <h3 class="txtSet">第一集經典的片段，由黑幫老大"維果"代為敘述</h3>
+                <h3 class="txtSet">第一集經典的片段<br>由黑幫老大"維果"代為敘述</h3>
             </div>
         </div>
         <div class="row">
